# screenmonitor

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: manager.rs  mod.rs  os.rs
src/utils/: logger.rs
